# pkg/AlbomxComicsController.go
@@ -24,23 +24,23 @@ func NewAlbomxComicsController(AlbomxComicsService AlbomxComicsService, logger l
 
 
 func (e *AlbomxComicsController) SetupRouter(server *gin.Engine)  {
-	server.GET("/hello", e.AlbomxcomicsHelloHandler) //each GET /hello request will be handled by AlbomxcomicsHelloHandler function
+	server.GET("/characters", e.AlbomxcomicsCharactersHandler)
+	server.GET("/collaborators", e.AlbomxcomicsCollaboratorsHandler)
 }
 
 
-// AlbomxcomicsHelloHandler godoc
+// AlbomxcomicsCharactersHandler godoc
 // @Tags Albomxcomics
-// @Summary Example
-// @Description Example
+// @Summary get
+// @Description Get characters info
 // @Accept  json
 // @Produce  json
-// @Router /hello [get]
-// @Success 200 {object} dto.HelloWorldResponse
+// @Router /characters [get]
+// @Success 200 {object} dto.CharactersResponse
 // @Failure 400 {object} string
-// @Param name query string false "To who am i saying hi?"
-// @x-amazon-apigateway-integration { "uri": "${lambda_arn}", "passthroughBehavior": "when_no_match", "httpMethod": "POST", "type": "aws_proxy" }
-func (e *AlbomxComicsController) AlbomxcomicsHelloHandler(context *gin.Context) {
-	request := new(dto.HelloWorldRequest)
+// @Param avengerId query string false "To who am i getting?"
+func (e *AlbomxComicsController) AlbomxcomicsCharactersHandler(context *gin.Context) {
+	request := new(dto.ComicRequest)
 
 	err := context.ShouldBindQuery(request) //Unmarshall query params to HelloWorldRequest struct
 	if err != nil {
@@ -48,11 +48,48 @@ func (e *AlbomxComicsController) AlbomxcomicsHelloHandler(context *gin.Context) 
 		return
 	}
 
-	response, err := e.AlbomxComicsService.Hello(request)
+	response, err := e.AlbomxComicsService.GetCharacters(request)
 	if err != nil {
 		_ = context.Error(err)
+		return
+	}
+	if response.LastSync == ""{
+		context.JSON(http.StatusNotFound, fmt.Sprintf("Id %s not found in database", request.AvengerId))
 		return
 	}
 
 	context.JSON(http.StatusOK, response)
 }
+
+// AlbomxcomicsCollaboratorsHandler godoc
+// @Tags Albomxcomics
+// @Summary get
+// @Description Get collaborators info
+// @Accept  json
+// @Produce  json
+// @Router /collaborators [get]
+// @Success 200 {object} dto.CollaboratorsResponse
+// @Failure 400 {object} string
+// @Param avengerId query string false "To who am i getting?"
+func (e *AlbomxComicsController) AlbomxcomicsCollaboratorsHandler(context *gin.Context) {
+	request := new(dto.ComicRequest)
+
+	err := context.ShouldBindQuery(request) //Unmarshall query params to HelloWorldRequest struct
+	if err != nil {
+		_ = context.Error(fmt.Errorf("")) //Error will be handled by the ErrorHandlerMiddleware
+		return
+	}
+
+	response, err := e.AlbomxComicsService.GetCollaborators(request)
+	if err != nil {
+		_ = context.Error(err)
+		return
+	}
+	if response.LastSync == ""{
+		context.JSON(http.StatusNotFound, fmt.Sprintf("Id %s not found in database", request.AvengerId))
+		return
+	}
+
+	context.JSON(http.StatusOK, response)
+}
+
