# pkg/dto/ComicDb.go
@@ -1,6 +1,6 @@
 package dto
 
 type ComicDb struct {
-	CharacterName  string   `json:"characterName"`
-	LastSync  string   `json:"lastSync"`
+	CharacterName  	string   `json:"characterName"`
+	LastSync  		string   `json:"lastSync"`
 }
