# pkg/dto/ComicRequest.go
@@ -1,0 +1,5 @@
+package dto
+
+type ComicRequest struct {
+	AvengerId string `form:"avengerId"`
+} //@Name ComicRequest
