# pkg/dto/HelloWorldResponse.go
@@ -1,5 +1,0 @@
-package dto
-
-type HelloWorldResponse struct {
-	Message string `json:"message"`
-} //@Name HelloWorldResponse
